--- a/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.scss
+++ b/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.scss
@@ -36,3 +36,33 @@
 .date-filter-text {
   font-size: 0.7rem;
 }
+.example-container {
+  box-shadow: none;
+  height: auto;
+  width: 100%;
+  overflow: auto;
+}
+
+table {
+  width: 150%;
+}
+
+td.mat-column-star {
+  width: 20px;
+  padding-right: 8px;
+}
+
+th.mat-column-position,
+td.mat-column-position {
+  padding-left: 8px;
+}
+
+mat-header-cell {
+  flex-wrap: nowrap;
+  min-width: 200px;
+}
+.mat-row,
+.mat-header-row {
+  min-width: 120%;
+  width: 100%;
+}
