--- a/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.html
+++ b/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.html
@@ -28,7 +28,10 @@
       </ion-row>
     </ion-card-header>
     <div class="loading-shade" *ngIf="dataSource.loading$ | async">
-      <mat-progress-bar *ngIf="dataSource.loading$ | async" mode="indeterminate"></mat-progress-bar>
+      <mat-progress-bar
+        *ngIf="dataSource.loading$ | async"
+        mode="indeterminate"
+      ></mat-progress-bar>
     </div>
     <ion-card-content class="ion-no-padding">
       <ion-grid>
@@ -159,131 +162,147 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-      <mat-table class="full-width-table" [dataSource]="dataSource" matSort (matSortChange)="setFilter($event)"
-        style="width: 100%;">
-        <ng-container matColumnDef="sr_no">
-          <mat-header-cell *matHeaderCellDef> </mat-header-cell>
-          <mat-cell *matCellDef="let row;let i=index ">
-            {{i+1}}
-          </mat-cell>
-          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-        </ng-container>
+      <div class="example-container mat-elevation-z8">
+        <mat-table
+          class="full-width-table"
+          [dataSource]="dataSource"
+          matSort
+          (matSortChange)="setFilter($event)"
+        >
+          <ng-container matColumnDef="sr_no">
+            <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+            <mat-cell *matCellDef="let row;let i=index ">
+              {{i+1}}
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="createdByEmail">
-          <mat-header-cell *matHeaderCellDef mat-sort-header="name">
-            Created By
-          </mat-header-cell>
-          <mat-cell *matCellDef="let row">
-            {{row.createdByEmail}}
-          </mat-cell>
-          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-        </ng-container>
+          <ng-container matColumnDef="createdByEmail">
+            <mat-header-cell *matHeaderCellDef mat-sort-header="name">
+              Created By
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{row.createdByEmail}}
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="status">
-          <mat-header-cell *matHeaderCellDef mat-sort-header="status"
-            >Status</mat-header-cell
-          >
-          <mat-cell *matCellDef="let row">
-            <ion-text
-            [ngStyle]="{'color': (row.status === 'Delivered') ? 'green' : (row.status === 'Returned') ? 'red' : 'blue' }"
+          <ng-container matColumnDef="status">
+            <mat-header-cell *matHeaderCellDef mat-sort-header="status"
+              >Status</mat-header-cell
             >
-              {{row.status}}
-            </ion-text>
-          </mat-cell>
-          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-        </ng-container>
+            <mat-cell *matCellDef="let row">
+              <ion-text
+                [ngStyle]="{'color': (row.status === 'Delivered') ? 'green' : (row.status === 'Returned') ? 'red' : 'blue' }"
+              >
+                {{row.status}}
+              </ion-text>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="posting_date">
-          <mat-header-cell *matHeaderCellDef mat-sort-header="created_on">
-            Posting Date
-          </mat-header-cell>
-          <mat-cell *matCellDef="let row">
-            {{row.posting_date | date:'dd-MM-yyyy'}}
-          </mat-cell>
-          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-        </ng-container>
+          <ng-container matColumnDef="posting_date">
+            <mat-header-cell *matHeaderCellDef mat-sort-header="created_on">
+              Posting Date
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{row.posting_date | date:'dd-MM-yyyy'}}
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="createdBy">
-          <mat-header-cell *matHeaderCellDef mat-sort-header="supplier">
-            Created By
-          </mat-header-cell>
-          <mat-cell *matCellDef="let row">
-            {{row.createdBy}}
-          </mat-cell>
-          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-        </ng-container>
+          <ng-container matColumnDef="createdBy">
+            <mat-header-cell *matHeaderCellDef mat-sort-header="supplier">
+              Created By
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{row.createdBy}}
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="remarks">
-          <mat-header-cell *matHeaderCellDef>
-            Remarks
-          </mat-header-cell>
-          <mat-cell *matCellDef="let row">
-            {{ row.remarks }}
-          </mat-cell>
-          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-        </ng-container>
+          <ng-container matColumnDef="remarks">
+            <mat-header-cell *matHeaderCellDef>
+              Remarks
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{ row.remarks }}
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="territory">
-          <mat-header-cell *matHeaderCellDef>
-            Territory
-          </mat-header-cell>
-          <mat-cell *matCellDef="let row">
-            {{ row.territory }}
-          </mat-cell>
-          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-        </ng-container>
+          <ng-container matColumnDef="territory">
+            <mat-header-cell *matHeaderCellDef>
+              Territory
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{ row.territory }}
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="posting_time">
-          <mat-header-cell *matHeaderCellDef>
-            Posting Time
-          </mat-header-cell>
-          <mat-cell *matCellDef="let row">
-            {{ row.posting_time }}
-          </mat-cell>
-          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-        </ng-container>
+          <ng-container matColumnDef="posting_time">
+            <mat-header-cell *matHeaderCellDef>
+              Posting Time
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{ row.posting_time }}
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="name">
-          <mat-header-cell *matHeaderCellDef>
-            Name
-          </mat-header-cell>
-          <mat-cell *matCellDef="let row">
-            {{ (row.names && row.names.length) ? row.names[0] : '' }}
-          </mat-cell>
-          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-        </ng-container>
+          <ng-container matColumnDef="name">
+            <mat-header-cell *matHeaderCellDef>
+              Name
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{ (row.names && row.names.length) ? row.names[0] : '' }}
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="s_warehouse">
-          <mat-header-cell *matHeaderCellDef>
-            From Warehouse
-          </mat-header-cell>
-          <mat-cell *matCellDef="let row">
-            {{row?.items[0].s_warehouse }}
-          </mat-cell>
-          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-        </ng-container>
+          <ng-container matColumnDef="s_warehouse">
+            <mat-header-cell *matHeaderCellDef>
+              From Warehouse
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{row?.items[0].s_warehouse }}
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="t_warehouse">
-          <mat-header-cell *matHeaderCellDef>
-            To Warehouse
-          </mat-header-cell>
-          <mat-cell *matCellDef="let row">
-            {{row?.items[0].t_warehouse }}
-          </mat-cell>
-          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-        </ng-container>
+          <ng-container matColumnDef="t_warehouse">
+            <mat-header-cell *matHeaderCellDef>
+              To Warehouse
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{row?.items[0].t_warehouse }}
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
 
-
-
-        <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/material-transfer/',row.uuid]">
-        </mat-row>
-        <mat-footer-row class="footer" *matFooterRowDef="displayedColumns; sticky: true"></mat-footer-row>
-      </mat-table>
-
+          <mat-header-row
+            *matHeaderRowDef="displayedColumns; sticky: true"
+          ></mat-header-row>
+          <mat-row
+            *matRowDef="let row; columns: displayedColumns;"
+            [routerLink]="['/material-transfer/',row.uuid]"
+          >
+          </mat-row>
+          <mat-footer-row
+            class="footer"
+            *matFooterRowDef="displayedColumns; sticky: true"
+          ></mat-footer-row>
+        </mat-table>
+      </div>
       <mat-card-actions>
-        <mat-paginator #paginator class="mat-paginator-sticky" (page)="getUpdate($event)" [length]="dataSource.length"
-          [pageSizeOptions]="[10, 50, 100, 500]">
+        <mat-paginator
+          #paginator
+          class="mat-paginator-sticky"
+          (page)="getUpdate($event)"
+          [length]="dataSource.length"
+          [pageSizeOptions]="[10, 50, 100, 500]"
+        >
         </mat-paginator>
       </mat-card-actions>
     </ion-card-content>
