--- a/packages/rma-frontend/src/app/job-ui/jobs/jobs.page.scss
+++ b/packages/rma-frontend/src/app/job-ui/jobs/jobs.page.scss
@@ -1,8 +1,25 @@
 .example-container {
-  height: 80vh;
+  box-shadow: none;
+  height: auto;
+  width: 100%;
   overflow: auto;
 }
 
 table {
-  width: 100%;
+  width: 150%;
+}
+
+td.mat-column-star {
+  width: 20px;
+  padding-right: 8px;
+}
+
+th.mat-column-position,
+td.mat-column-position {
+  padding-left: 8px;
+}
+
+mat-header-cell {
+  flex-wrap: nowrap;
+  min-width: 200px;
 }
