--- a/packages/rma-frontend/src/app/problem-ui/problem/problem.page.html
+++ b/packages/rma-frontend/src/app/problem-ui/problem/problem.page.html
@@ -47,49 +47,46 @@
           </button>
         </mat-form-field>
       </div>
-      <mat-table
-        #table
-        [dataSource]="dataSource"
-        matSort
-        style="width: 100%;max-height: 58vh;overflow: auto;"
-      >
-        <ng-container matColumnDef="sr_no">
-          <mat-header-cell *matHeaderCellDef> </mat-header-cell>
-          <mat-cell *matCellDef="let row;let i=index ">
-            {{i+1}}
-          </mat-cell>
-          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-        </ng-container>
+      <div class="example-container mat-elevation-z8">
+        <mat-table #table [dataSource]="dataSource" matSort>
+          <ng-container matColumnDef="sr_no">
+            <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+            <mat-cell *matCellDef="let row;let i=index ">
+              {{i+1}}
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="problem_name">
-          <mat-header-cell *matHeaderCellDef>
-            Problem
-          </mat-header-cell>
-          <mat-cell *matCellDef="let row" (click)="updateProblem(row.uuid)">
-            {{row.problem_name}}
-          </mat-cell>
-        </ng-container>
+          <ng-container matColumnDef="problem_name">
+            <mat-header-cell *matHeaderCellDef>
+              Problem
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row" (click)="updateProblem(row.uuid)">
+              {{row.problem_name}}
+            </mat-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="delete">
-          <mat-header-cell *matHeaderCellDef></mat-header-cell>
-          <mat-cell *matCellDef="let row ">
-            <ion-button
-              (click)="deleteProblem(row.uuid)"
-              fill="clear"
-              class="ion-no-padding"
-              color="danger"
-            >
-              <ion-icon slot="icon-only" name="trash"></ion-icon>
-            </ion-button>
-          </mat-cell>
-          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-        </ng-container>
+          <ng-container matColumnDef="delete">
+            <mat-header-cell *matHeaderCellDef></mat-header-cell>
+            <mat-cell *matCellDef="let row ">
+              <ion-button
+                (click)="deleteProblem(row.uuid)"
+                fill="clear"
+                class="ion-no-padding"
+                color="danger"
+              >
+                <ion-icon slot="icon-only" name="trash"></ion-icon>
+              </ion-button>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
 
-        <mat-header-row
-          *matHeaderRowDef="displayedColumns; sticky: true"
-        ></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-      </mat-table>
+          <mat-header-row
+            *matHeaderRowDef="displayedColumns; sticky: true"
+          ></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        </mat-table>
+      </div>
       <mat-card-actions>
         <mat-paginator
           #paginator
