--- a/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.scss
+++ b/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.scss
@@ -6,3 +6,29 @@
 .footer {
   font-weight: bold;
 }
+
+.example-container {
+  box-shadow: none;
+  height: auto;
+  width: 100%;
+  overflow: auto;
+}
+
+table {
+  width: 150%;
+}
+
+td.mat-column-star {
+  width: 20px;
+  padding-right: 8px;
+}
+
+th.mat-column-position,
+td.mat-column-position {
+  padding-left: 8px;
+}
+
+mat-header-cell {
+  flex-wrap: nowrap;
+  min-width: 200px;
+}
