--- a/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.scss
+++ b/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.scss
@@ -30,3 +30,32 @@
   width: 100%;
   color: black;
 }
+.example-container {
+  box-shadow: none;
+  height: auto;
+  width: 100%;
+  overflow: auto;
+}
+
+table {
+  width: 150%;
+}
+
+td.mat-column-star {
+  width: 20px;
+  padding-right: 8px;
+}
+
+th.mat-column-position,
+td.mat-column-position {
+  padding-left: 8px;
+}
+
+mat-header-cell {
+  flex-wrap: nowrap;
+  min-width: 200px;
+}
+.mat-header-row,
+.mat-row {
+  display: inline-flex;
+}
