--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
@@ -22,124 +22,126 @@
   </ion-card-header>
 
   <ion-card-content class="ion-no-padding">
-    <mat-table #table [dataSource]="dataSource" style="width: 100%;">
-      <ng-container matColumnDef="invoice_no">
-        <mat-header-cell *matHeaderCellDef>Invoice No</mat-header-cell>
-        <mat-cell *matCellDef="let row" (click)="openERPServiceInvoice(row)">
-          <ng-container *ngIf="row.invoice_no">
-            {{ row.invoice_no }}
-          </ng-container>
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-      </ng-container>
+    <div class="example-container mat-elevation-z8">
+      <mat-table #table [dataSource]="dataSource">
+        <ng-container matColumnDef="invoice_no">
+          <mat-header-cell *matHeaderCellDef>Invoice No</mat-header-cell>
+          <mat-cell *matCellDef="let row" (click)="openERPServiceInvoice(row)">
+            <ng-container *ngIf="row.invoice_no">
+              {{ row.invoice_no }}
+            </ng-container>
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
 
-      <ng-container matColumnDef="status">
-        <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <ng-container>
-            {{ row.status }}
-          </ng-container>
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-      </ng-container>
+        <ng-container matColumnDef="status">
+          <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            <ng-container>
+              {{ row.status }}
+            </ng-container>
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
 
-      <ng-container matColumnDef="date">
-        <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <ng-container>
-            {{ row.posting_date }}
-          </ng-container>
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-      </ng-container>
+        <ng-container matColumnDef="date">
+          <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            <ng-container>
+              {{ row.posting_date }}
+            </ng-container>
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
 
-      <ng-container matColumnDef="customer_third_party">
-        <mat-header-cell *matHeaderCellDef
-          >Customer / Third Party</mat-header-cell
-        >
-        <mat-cell *matCellDef="let row">
-          <ng-container>
-            {{ row.customer_third_party }}
-          </ng-container>
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="invoice_amount">
-        <mat-header-cell *matHeaderCellDef>Invoice Amount</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <ng-container>
-            {{ row.total }}
-          </ng-container>
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="claim_no">
-        <mat-header-cell *matHeaderCellDef>Claim No</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          {{ warrantyObject?.claim_no }}
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="remarks">
-        <mat-header-cell *matHeaderCellDef>Remarks</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          {{ row.remarks }}
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="branch">
-        <mat-header-cell *matHeaderCellDef>Branch</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          {{ row.branch }}
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="created_by">
-        <mat-header-cell *matHeaderCellDef>Created by</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          {{ row.created_by }}
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="submitted_by">
-        <mat-header-cell *matHeaderCellDef>Submitted by</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          {{ row.created_by }}
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="submit">
-        <mat-header-cell *matHeaderCellDef>Submit</mat-header-cell>
-        <mat-cell *matCellDef="let row; let i = index">
-          <ion-button
-            *ngIf="!row.docstatus"
-            (click)="submitInvoice(row)"
-            fill="solid"
-            color="tertiary"
+        <ng-container matColumnDef="customer_third_party">
+          <mat-header-cell *matHeaderCellDef
+            >Customer / Third Party</mat-header-cell
           >
-            submit
-          </ion-button>
-          <label *ngIf="row.docstatus">Submitted</label>
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-      </ng-container>
+          <mat-cell *matCellDef="let row">
+            <ng-container>
+              {{ row.customer_third_party }}
+            </ng-container>
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
 
-      <mat-header-row
-        *matHeaderRowDef="displayedColumns; sticky: true"
-      ></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-      <mat-footer-row
-        class="footer"
-        *matFooterRowDef="displayedColumns; sticky: true"
-      ></mat-footer-row>
-    </mat-table>
+        <ng-container matColumnDef="invoice_amount">
+          <mat-header-cell *matHeaderCellDef>Invoice Amount</mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            <ng-container>
+              {{ row.total }}
+            </ng-container>
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="claim_no">
+          <mat-header-cell *matHeaderCellDef>Claim No</mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{ warrantyObject?.claim_no }}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="remarks">
+          <mat-header-cell *matHeaderCellDef>Remarks</mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{ row.remarks }}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="branch">
+          <mat-header-cell *matHeaderCellDef>Branch</mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{ row.branch }}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="created_by">
+          <mat-header-cell *matHeaderCellDef>Created by</mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{ row.created_by }}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="submitted_by">
+          <mat-header-cell *matHeaderCellDef>Submitted by</mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{ row.created_by }}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="submit">
+          <mat-header-cell *matHeaderCellDef>Submit</mat-header-cell>
+          <mat-cell *matCellDef="let row; let i = index">
+            <ion-button
+              *ngIf="!row.docstatus"
+              (click)="submitInvoice(row)"
+              fill="solid"
+              color="tertiary"
+            >
+              submit
+            </ion-button>
+            <label *ngIf="row.docstatus">Submitted</label>
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
+
+        <mat-header-row
+          *matHeaderRowDef="displayedColumns; sticky: true"
+        ></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+        <mat-footer-row
+          class="footer"
+          *matFooterRowDef="displayedColumns; sticky: true"
+        ></mat-footer-row>
+      </mat-table>
+    </div>
     <mat-card-actions>
       <mat-paginator
         #paginator
