--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
@@ -22,91 +22,93 @@
   </ion-card-header>
 
   <ion-card-content class="ion-no-padding">
-    <mat-table #table [dataSource]="dataSource" style="width: 100%;">
-      <ng-container matColumnDef="stock_voucher_number">
-        <mat-header-cell *matHeaderCellDef
-          >Stock Voucher Number</mat-header-cell
-        >
-        <mat-cell *matCellDef="let row">
-          <ng-container *ngIf="row.stock_voucher_number">
-            {{ row.stock_voucher_number }}
-          </ng-container>
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="claim_no">
-        <mat-header-cell *matHeaderCellDef>Claim No</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <ng-container>
-            {{ warrantyObject?.claim_no }}
-          </ng-container>
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="type">
-        <mat-header-cell *matHeaderCellDef>Type</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <ng-container>
-            {{ row.type }}
-          </ng-container>
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="date">
-        <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <ng-container>
-            {{ row.posting_date }}
-          </ng-container>
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="description">
-        <mat-header-cell *matHeaderCellDef>Description</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <ng-container>
-            {{ row.description }}
-          </ng-container>
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="completed_by">
-        <mat-header-cell *matHeaderCellDef>Completed By</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          {{ row.createdBy }}
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="rollback">
-        <mat-header-cell *matHeaderCellDef>Rollback</mat-header-cell>
-        <mat-cell *matCellDef="let row; let i = index">
-          <ion-button
-            fill="clear"
-            class="ion-no-padding"
-            color="danger"
-            (click)="removeStockEntry(row)"
+    <div class="example-container mat-elevation-z8">
+      <mat-table #table [dataSource]="dataSource">
+        <ng-container matColumnDef="stock_voucher_number">
+          <mat-header-cell *matHeaderCellDef
+            >Stock Voucher Number</mat-header-cell
           >
-            <ion-icon slot="icon-only" name="trash"></ion-icon>
-          </ion-button>
-        </mat-cell>
-        <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
-      </ng-container>
+          <mat-cell *matCellDef="let row">
+            <ng-container *ngIf="row.stock_voucher_number">
+              {{ row.stock_voucher_number }}
+            </ng-container>
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
 
-      <mat-header-row
-        *matHeaderRowDef="displayedColumns; sticky: true"
-      ></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-      <mat-footer-row
-        class="footer"
-        *matFooterRowDef="displayedColumns; sticky: true"
-      ></mat-footer-row>
-    </mat-table>
+        <ng-container matColumnDef="claim_no">
+          <mat-header-cell *matHeaderCellDef>Claim No</mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            <ng-container>
+              {{ warrantyObject?.claim_no }}
+            </ng-container>
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="type">
+          <mat-header-cell *matHeaderCellDef>Type</mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            <ng-container>
+              {{ row.type }}
+            </ng-container>
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="date">
+          <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            <ng-container>
+              {{ row.posting_date }}
+            </ng-container>
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="description">
+          <mat-header-cell *matHeaderCellDef>Description</mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            <ng-container>
+              {{ row.description }}
+            </ng-container>
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="completed_by">
+          <mat-header-cell *matHeaderCellDef>Completed By</mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{ row.createdBy }}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="rollback">
+          <mat-header-cell *matHeaderCellDef>Rollback</mat-header-cell>
+          <mat-cell *matCellDef="let row; let i = index">
+            <ion-button
+              fill="clear"
+              class="ion-no-padding"
+              color="danger"
+              (click)="removeStockEntry(row)"
+            >
+              <ion-icon slot="icon-only" name="trash"></ion-icon>
+            </ion-button>
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+        </ng-container>
+
+        <mat-header-row
+          *matHeaderRowDef="displayedColumns; sticky: true"
+        ></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+        <mat-footer-row
+          class="footer"
+          *matFooterRowDef="displayedColumns; sticky: true"
+        ></mat-footer-row>
+      </mat-table>
+    </div>
     <mat-card-actions>
       <mat-paginator
         #paginator
